--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../icons/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,43 +16,48 @@
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>Ernährung</title>
     <script type="module" src ="../All/Auth/auth0.js"></script>
+   <script src="dishes.js"></script>
 
 </head>
 <body>
 <!-- Sticky Top Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-
         <img src="../icons/logo-green-no-text.png" alt="Home" width="50" height="50">
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icons/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Startseite</span>
+                        <img src="../icons/bxs-home.svg" class="changeColor" alt="Home" width="20" height="20">
+                        <span class="translate-text" data-key="nav-home">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar"  href="../Shop/shop.html">
-                        <img src="../icons/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Produkte</span>
+                    <a class="nav-link textInNavBar" href="../Shop/shop.html">
+                        <img src="../icons/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <span class="translate-text" data-key="nav-products">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="../icons/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Ernährungspläne</span>
+                    <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
+                        <img src="../icons/bx-baguette.svg" class="changeColor" alt="Nutrition Plans" width="20" height="20">
+                        <span class="translate-text" data-key="nav-nutrition">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icons/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Trainingspläne</span>
+                        <img src="../icons/bx-run.svg" class="changeColor" alt="Training Plans" width="20" height="20">
+                        <span class="translate-text" data-key="nav-training">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icons/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true" class = "translate-text">Über uns</span>
+                        <img src="../icons/bxs-group.svg" class="changeColor" alt="About Us" width="20" height="20">
+                        <span class="translate-text" data-key="nav-about">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -74,7 +79,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="">
+                    <a class="nav-link textInNavBar" href="#">
                         <img src="../icons/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
@@ -83,7 +88,6 @@
         </div>
     </div>
 </nav>
-
 <section class="text-center py-5" style="margin-top: 5%">
     <h1 class="title-nutrition translate-text"><span data-translate="true">Ernährungspläne</span></h1>
     <p class="lead text-color translate-text"><span data-translate="true">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen</span></p>
@@ -177,13 +181,21 @@
 
 </div>
 
+<div class="container my-5 text-center" id="recipeButtonContainer" style="display: none;">
+
+</div>
+
+<div id="recipeResultsContainer" class="container my-5">
+
+</div>
+
 <div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-footer" style="color: #F6E8D5; font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
                         <span data-translate="true" class = "translate-text">Unsere Welt</span>
                     </h5>
 
@@ -211,7 +223,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-footer" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
                         <span data-translate="true" class = "translate-text">Karriere</span>
                     </h5>
 
@@ -225,7 +237,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-footer" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
                         <span data-translate="true" class = "translate-text">Kontaktiere uns</span>
                     </h5>
 
@@ -236,7 +248,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%" alt="logo">
+                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
         </div>
